syntax = "proto3";

package wres.statistics.generated;

option java_package = "wres.statistics.generated";
option java_outer_classname = "ThresholdProto";
option java_multiple_files = true;

message Threshold
{
    /*A message that encapsulates a threshold, which may contain one or two values
    with prescribed units and a user-friendly name.*/

    ThresholdOperator type = 1;
    // The type of threshold operator.

    string name = 2;
    // A user-friendly name for a threshold (e.g., MINOR FLOOD).
    
    double left_threshold_value = 3;
    // A real-valued left threshold.
        
    double right_threshold_value = 4;
    // A real-valued right threshold when the ThresholdType is BETWEEN.
        
    // The probability associated with the left threshold in [0,1]
    double left_threshold_probability = 5;
    
    double right_threshold_probability = 6;
    // The probability associated with the right threshold when BETWEEN in [0,1]
        
    string threshold_value_units = 7;
    // The units of the threshold, which may differ from evaluation units.
    
    enum ThresholdOperator 
    {
        /*The type of threshold condition, allowing for equality and various 
        inequalities.*/
        
        LESS = 0;
        // Identifier for less than.
        
        GREATER = 1;
        // Identifier for greater than.
        
        LESS_EQUAL = 2;
        // Identifier for less than or equal to.
        
        GREATER_EQUAL = 3;
        // Identifier for greater than or equal to.

        EQUAL = 4;
        // Identifier for equality.

        BETWEEN = 5;
        // Between condition with left exclusive and right inclusive
    }
}