syntax = "proto3";

package wres.statistics.generated;

option java_package = "wres.statistics.generated";
option java_outer_classname = "SummaryStatisticProto";
option java_multiple_files = true;

message SummaryStatistic
{
    // A message that encapsulates a summary statistic over a given dimension.

    enum StatisticName 
    {
        // A summary statistic name.
        
        MEAN = 0;
        MEDIAN = 1;
        MINIMUM = 2;
        MAXIMUM = 3;
        STANDARD_DEVIATION = 4;
        MEAN_ABSOLUTE = 5;
        QUANTILE = 6;
        HISTOGRAM = 7;
        BOX_PLOT = 8;
    }

    StatisticName statistic = 1;
    // The name of the summary statistic.

    enum StatisticDimension
    {
        // The dimension to which the summary statistic applies.
        
        FEATURES = 0;
        // A summary statistic over all geographic features within the evaluation.

        FEATURE_GROUP = 1;
        // A summary statistic over geographic features within a single feature group.
        
        RESAMPLED = 2;
        // A summary statistic over resampled pools for sampling uncertainty. 
        // estimation.

        TIMING_ERRORS = 3;
        // A summary statistic over timing errors.
    }

    StatisticDimension dimension = 2;
    // The dimension over which the summary statistic applies.

    double probability = 3;
    // The probability associated with the quantile when the summary statistic
    // is a quantile. Always a value within [0,1].

    int32 histogram_bins = 4;
    // The number of bins in the histogram when the summary statistic is a
    // histogram.
}